All_Component_DX/force-app/main/default/objects/Territory__c/Territory__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object provides basic definition of a service territory in ServiceMax. Service territories are not related in anyway to the Salesforce territory definitions.</description>
    <label>Territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>