All_Component_DX/force-app/main/default/objects/Territory__c/fields/Average_Driving_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Driving_Time__c</fullName>
    <label>Average Driving Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>