All_Component_DX/force-app/main/default/objects/Territory__c/fields/Average_Speed__c.field-meta.xml
<CustomField>
    <fullName>Average_Speed__c</fullName>
    <description>Average speed in which the technicians of this territory travel on the road. Used in dispatch optimization</description>
    <label>Average Speed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>