All_Component_DX/force-app/main/default/objects/Territory__c/fields/Break_Hours__c.field-meta.xml
<CustomField>
    <fullName>Break_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Break Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Territory2</relationshipName>
    <type>Lookup</type>
</CustomField>