All_Component_DX/force-app/main/default/objects/Territory__c/fields/Fixed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Cost__c</fullName>
    <description>Any fixed costs associated with the technicians in this territory for each day of work order activity. Used in dispatch optimization</description>
    <label>Fixed Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>