All_Component_DX/force-app/main/default/objects/Territory__c/fields/Max_Hours__c.field-meta.xml
<CustomField>
    <fullName>Max_Hours__c</fullName>
    <description>Max hours</description>
    <label>Max Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>