All_Component_DX/force-app/main/default/objects/Territory__c/fields/Mode_Of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Travel__c</fullName>
    <label>Mode Of Travel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driving</fullName>
                <default>true</default>
                <label>Driving</label>
            </value>
            <value>
                <fullName>Driving Avoid Tolls</fullName>
            </value>
            <value>
                <fullName>Driving Avoid Highways</fullName>
            </value>
            <value>
                <fullName>Walking</fullName>
            </value>
            <value>
                <fullName>Bicycling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>