All_Component_DX/force-app/main/default/objects/Territory__c/fields/Optimizer_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Optimizer_External_ID__c</fullName>
    <description>Some identifier from the external scheduling optimizer to link the Territory</description>
    <externalId>true</externalId>
    <inlineHelpText>Some identifier from the external scheduling optimizer to link the Territory</inlineHelpText>
    <label>Optimizer External Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>