All_Component_DX/force-app/main/default/objects/Territory__c/fields/Optimizer_Last_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Optimizer_Last_Timestamp__c</fullName>
    <description>Last timestamp of when schedule details retrieved from the scheduling optmizer</description>
    <inlineHelpText>Last timestamp of when schedule details retrieved from the scheduling optmizer</inlineHelpText>
    <label>Optimizer Last Timestamp</label>
    <length>80</length>
    <type>Text</type>
</CustomField>