All_Component_DX/force-app/main/default/objects/Territory__c/fields/Per_Mile_Cost__c.field-meta.xml
<CustomField>
    <fullName>Per_Mile_Cost__c</fullName>
    <description>Average travel cost per mile for this territory. Used in dispatch optimization</description>
    <label>Per Mile Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>