All_Component_DX/force-app/main/default/objects/Territory__c/fields/SM_Overnight_Stay_Policy__c.field-meta.xml
<CustomField>
    <fullName>SM_Overnight_Stay_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up field for overnight policy in the territory object</description>
    <inlineHelpText>Look up field for overnight policy in the territory object</inlineHelpText>
    <label>Overnight Stay Policy</label>
    <referenceTo>SM_Overnight_Stay_Policy__c</referenceTo>
    <relationshipLabel>Territories</relationshipLabel>
    <relationshipName>Territories</relationshipName>
    <type>Lookup</type>
</CustomField>