All_Component_DX/force-app/main/default/objects/Territory__c/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <description>Any internal (typically financials) code your organization uses to refer to this territory</description>
    <label>Territory Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>